[project]
name = "cabotage"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "backoff>=2.2.1",
    "bleach>=6.0.0",
    "celery>=5.4.0",
    "celery-redbeat>=2.2.0",
    "cryptography>=42.0.4",
    "dockerfile-parse>=2.0.0",
    "authlib>=1.3.0",
    "flask>=3.1.0",
    "flask-admin>=1.6.1",
    "flask-babel>=4.0.0",
    "flask-bcrypt>=1.0.1",
    "flask-bootstrap>=3.3.7.1",
    "flask-debugtoolbar>=0.14.1",
    "flask-env>=2.0.0",
    "flask-mail>=0.9.1",
    "flask-migrate>=4.0.0",
    "flask-nav3>=0.7.0",
    "flask-security-too>=5.3.3",
    "flask-sock>=0.6.0",
    "flask-sqlalchemy>=3.1.0",
    "gunicorn>=23.0.0",
    "humanize>=4.15.0",
    "hupper>=1.10.3",
    "hvac>=2.3.0",
    "kubernetes>=30.1.0",
    "psycopg2-binary>=2.9.6",
    "py-consul>=1.5.1",
    "pygithub>=1.59.1",
    "pyjwt>=2.4.0",
    "python-dxf>=10.0.0",
    "qrcode>=7.4.2",
    "redis>=3.5.3",
    "sentry-sdk[flask]>=2.6.0",
    "setuptools>=81.0.0",
    "sqlalchemy>=2.0.0",
    "sqlalchemy-citext>=1.8.0",
    "sqlalchemy-continuum>=1.6.0",
    "sqlalchemy-utils>=0.41.0",
    "toml>=0.10.2",
    "unidecode>=1.2.0",
    "urllib3>=2.2.2",
]

[dependency-groups]
dev = [
    "bandit>=1.7.9",
    "black>=24.4.2",
    "mypy>=1.11.0",
    "ruff>=0.5.1",
    "types-pyyaml>=6.0.12.20240311",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20240712",
    "types-toml>=0.10.8.20240310",
    "typing-extensions==4.7.1",
    "urllib3==2.6.3",
]

[tool.bandit]
exclude_dirs = ["bin", "lib"]

[tool.mypy]
ignore_missing_imports = true
