[project]
name = "cabotage"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "backoff",
    "bleach",
    "celery",
    "celery-redbeat",
    "croniter",
    "cryptography",
    "dockerfile-parse",
    "argon2-cffi",
    "authlib",
    "flask",
    "flask-admin",
    "flask-babel",
    "flask-bcrypt",
    "flask-debugtoolbar",
    "flask-env",
    "flask-mail",
    "flask-migrate",
    "flask-security-too",
    "flask-sock",
    "flask-sqlalchemy",
    "gunicorn",
    "humanize",
    "hvac>=2.3.0",
    "kubernetes>=30.1.0",
    "pathspec",
    "psycopg2-binary",
    "py-consul>=1.5.1",
    "pygithub>=1.59.1",
    "pyjwt",
    "python-dxf",
    "qrcode",
    "webauthn",
    "redis",
    "sentry-sdk[flask]",
    "setuptools>=81.0.0,<82",
    "sqlalchemy",
    "sqlalchemy-continuum",
    "sqlalchemy-utils",
    "toml",
    "unidecode",
    "urllib3",
]

[dependency-groups]
dev = [
    "bandit",
    "black",
    "hupper",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-croniter",
    "types-pyyaml",
    "types-redis",
    "types-requests",
    "types-toml",
    "typing-extensions",
]

[tool.pytest.ini_options]
addopts = "--cov=cabotage --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["cabotage"]
omit = [
    "cabotage/client/*",
    "cabotage/server/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.bandit]
exclude_dirs = ["bin", "lib", "tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.uv]
exclude-newer = "1 week"
