[project]
name = "cabotage"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi",
    "authlib",
    "backoff",
    "bleach",
    "celery",
    "celery-redbeat",
    "croniter",
    "cryptography",
    "dockerfile-parse",
    "flask",
    "flask-admin",
    "flask-babel",
    "flask-bcrypt",
    "flask-debugtoolbar",
    "flask-env",
    "flask-mail",
    "flask-migrate",
    "flask-security-too",
    "flask-sock",
    "flask-sqlalchemy",
    "gunicorn",
    "humanize",
    "hvac",
    "kubernetes",
    "pathspec",
    "psycopg2-binary",
    "py-consul",
    "pygithub",
    "pyjwt",
    "python-dxf",
    "qrcode",
    "redis",
    "sentry-sdk[flask]",
    "setuptools>=81.0.0,<82",
    "sqlalchemy",
    "sqlalchemy-continuum",
    "sqlalchemy-utils",
    "toml",
    "unidecode",
    "urllib3",
    "webauthn",
]

[dependency-groups]
dev = [
    "bandit",
    "hupper",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
    "types-croniter",
    "types-pyyaml",
    "types-pygments",
    "types-redis",
    "types-requests",
    "types-toml",
    "typing-extensions",
]

[tool.pytest.ini_options]
addopts = "--cov=cabotage --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["cabotage"]
omit = [
    "cabotage/client/*",
    "cabotage/server/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.bandit]
exclude_dirs = ["bin", "lib", "tests"]

[tool.uv]
exclude-newer = "1 week"
